<resources>

    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_welcome_tv">Hey,What do think about this app?come and say something!</string>
    <string name="title_activity_setting">settingActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="timersetting">Timer Settings</string>
    <string name="app_name">Yueyunpeng Xiangsheng</string>
    <string name="dialog_cancel_btn">Maybe Next Time</string>
    <string name="dialog_confirm_btn">OK,Just Do It!</string>
    <string name="haojiubujian">Long time no see</string>
    <string name="taixiangai">Tai Xiang Ai</string>
    <string name="sheng">Sheng</string>
    <string name="setting_cancel_tv">Cancel</string>
    <string name="peng">Peng</string>
    <string name="xiang">Xiang</string>
    <string name="youqingsuiyue">Youqingsuiyue</string>
    <string name="yue">Yue</string>
    <string name="yueyunpengxiangsheng">Yueyunpeng Xiangsheng</string>
    <string name="yun">Yun</string>

</resources>
