<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/wel_layout"
    tools:context=".WelActivity">

        <TextView
            android:id="@+id/yue_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/yun_tv"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/yue"
            android:visibility="invisible"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/yun_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/peng_tv"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/yun"
            android:visibility="invisible"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/peng_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/peng"
            android:visibility="invisible"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/xiang_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/peng_tv"
            android:layout_marginLeft="5dp"
            android:text="@string/xiang"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/sheng_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/xiang_tv"
            android:layout_marginLeft="5dp"
            android:text="@string/sheng"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:textSize="50dp" />


</RelativeLayout>
