<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00808080"
        android:gravity="center"
        android:minHeight="100dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dialog_welcome_tv"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#00808080">

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_confirm_btn"
            android:singleLine="true"
            android:text="@string/dialog_confirm_btn"
            android:textColor="@color/bg_white" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_confirm_btn"
            android:singleLine="true"
            android:text="@string/dialog_cancel_btn"
            android:textColor="@color/bg_white" />
    </LinearLayout>

</LinearLayout>